start additioanl publication file page

--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -59,6 +59,9 @@
     <Content Update="Pages\Publications\EditFile.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Pages\Publications\AdditionalMovies.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Pages\Shared\Components\FirstEditionTas\Default.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
