--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -18,6 +18,7 @@
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\RerecordCountMissing.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\savestate.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\sram.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\SubNes.bk2" />
     <EmbeddedResource Include="MovieParsers\Fm2SampleFiles\fds.fm2" />
     <EmbeddedResource Include="MovieParsers\Fm2SampleFiles\ntsc.fm2" />
     <EmbeddedResource Include="MovieParsers\Fm2SampleFiles\pal.fm2" />
