lsmc - system and region parsing

--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -33,6 +33,18 @@
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\0frameswithsub.lsmv" />
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\2frameswithsub.lsmv" />
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\emptyrerecordentry.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-bsx.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-bsxslotted.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-empty.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-gdmg.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-ggbc.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-ggbca.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-missing.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-sgb_ntsc.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-sgb_pal.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-snesntsc.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-snespal.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\gametype-sufamiturbo.lsmv" />
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\invalidrerecordentry.lsmv" />
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\noinputlog.lsmv" />
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\norerecordentry.lsmv" />
