--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -6,12 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="MovieParsers\Bk2SampleFiles\System-Fds.bk2" />
-    <None Remove="MovieParsers\Bk2SampleFiles\System-Gbc.bk2" />
-    <None Remove="MovieParsers\Bk2SampleFiles\System-Nes.bk2" />
-  </ItemGroup>
-
-  <ItemGroup>
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\0Frames.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\2Frames.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\MissingHeader.bk2" />
@@ -31,6 +25,7 @@
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Genesis.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Nes.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-SegaCd.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Sgb.bk2" />
     <EmbeddedResource Include="MovieParsers\DsmSampleFiles\0frames.dsm" />
     <EmbeddedResource Include="MovieParsers\DsmSampleFiles\2frames.dsm" />
     <EmbeddedResource Include="MovieParsers\DsmSampleFiles\norerecords.dsm" />
