--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -23,9 +23,12 @@
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Gb.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Gbc.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Genesis.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Gg.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Nes.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-SegaCd.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Sg.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Sgb.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Sms.bk2" />
     <EmbeddedResource Include="MovieParsers\DsmSampleFiles\0frames.dsm" />
     <EmbeddedResource Include="MovieParsers\DsmSampleFiles\2frames.dsm" />
     <EmbeddedResource Include="MovieParsers\DsmSampleFiles\norerecords.dsm" />
