--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -19,6 +19,10 @@
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\SubNes.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\SubNesMissingVBlank.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-32x.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-A2600.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-A7800.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-C64.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Dgb.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Fds.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Gb.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Gbc.bk2" />
@@ -27,10 +31,16 @@
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Nes.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Pce.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-PceCd.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Saturn.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-SegaCd.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Sg.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Sgb.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Sgx.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Sms.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Snes.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Uze.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Vb.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Zxs.bk2" />
     <EmbeddedResource Include="MovieParsers\DsmSampleFiles\0frames.dsm" />
     <EmbeddedResource Include="MovieParsers\DsmSampleFiles\2frames.dsm" />
     <EmbeddedResource Include="MovieParsers\DsmSampleFiles\norerecords.dsm" />
