--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -21,16 +21,25 @@
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-32x.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-A2600.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-A7800.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-AppleII.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-C64.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Coleco.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Dgb.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Fds.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Gb.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Gba.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Gbc.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Genesis.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Gg.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Intellivision.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Lynx.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-N64.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Nes.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Ngb.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Pce.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-PceCd.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Pcfx.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Psx.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Saturn.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-SegaCd.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Sg.bk2" />
@@ -40,6 +49,7 @@
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Snes.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Uze.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Vb.bk2" />
+    <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Wswan.bk2" />
     <EmbeddedResource Include="MovieParsers\Bk2SampleFiles\System-Zxs.bk2" />
     <EmbeddedResource Include="MovieParsers\DsmSampleFiles\0frames.dsm" />
     <EmbeddedResource Include="MovieParsers\DsmSampleFiles\2frames.dsm" />
