--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -82,6 +82,7 @@
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\norerecordentry.lsmv" />
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\savestate.anchor.lsmv" />
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\savestate.lsmv" />
+    <EmbeddedResource Include="MovieParsers\LtmSampleFiles\2frames.ltm" />
   </ItemGroup>
 
   <ItemGroup>
