--- a/TASVideos.Parsers/TASVideos.MovieParsers.csproj
+++ b/TASVideos.Parsers/TASVideos.MovieParsers.csproj
@@ -2,4 +2,7 @@
    <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+   <ItemGroup>
+     <PackageReference Include="SharpCompress" Version="0.23.0" />
+   </ItemGroup>
 </Project>
