--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="MovieParsers\DtmSampleFiles\savestate.dtm" />
     <None Remove="MovieParsers\LtmSampleFiles\noframerate.ltm" />
   </ItemGroup>
 
@@ -100,6 +101,10 @@
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="MovieParsers\DtmSampleFiles\savestate.dtm" />
   </ItemGroup>
 
   <ItemGroup>
