--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -71,6 +71,8 @@
     <EmbeddedResource Include="MovieParsers\Fm2SampleFiles\ntsc.fm2" />
     <EmbeddedResource Include="MovieParsers\Fm2SampleFiles\pal.fm2" />
     <EmbeddedResource Include="MovieParsers\Fm2SampleFiles\savestate.fm2" />
+    <EmbeddedResource Include="MovieParsers\GmvSampleFiles\2frames.gmv" />
+    <EmbeddedResource Include="MovieParsers\GmvSampleFiles\wrongheader.gmv" />
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\0frameswithsub.lsmv" />
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\2frameswithsub.lsmv" />
     <EmbeddedResource Include="MovieParsers\LsmvSampleFiles\emptyrerecordentry.lsmv" />
