--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -94,6 +94,8 @@
     <EmbeddedResource Include="MovieParsers\LtmSampleFiles\2frames.ltm" />
     <EmbeddedResource Include="MovieParsers\LtmSampleFiles\noframerate.ltm" />
     <EmbeddedResource Include="MovieParsers\LtmSampleFiles\savestate.ltm" />
+    <EmbeddedResource Include="MovieParsers\MarSampleFiles\2frames.mar" />
+    <EmbeddedResource Include="MovieParsers\MarSampleFiles\wrongheader.mar" />
   </ItemGroup>
 
   <ItemGroup>
