omr parser - plumbing

--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -97,6 +97,7 @@
     <EmbeddedResource Include="MovieParsers\MarSampleFiles\2frames.mar" />
     <EmbeddedResource Include="MovieParsers\MarSampleFiles\noframerate.mar" />
     <EmbeddedResource Include="MovieParsers\MarSampleFiles\wrongheader.mar" />
+    <EmbeddedResource Include="MovieParsers\OmrSampleFiles\2frames.omr" />
     <EmbeddedResource Include="MovieParsers\WtfSampleFiles\2frames.wtf" />
     <EmbeddedResource Include="MovieParsers\WtfSampleFiles\noframerate.wtf" />
     <EmbeddedResource Include="MovieParsers\WtfSampleFiles\wrongheader.wtf" />
