--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -103,6 +103,7 @@
     <EmbeddedResource Include="MovieParsers\OmrSampleFiles\pal.omr" />
     <EmbeddedResource Include="MovieParsers\OmrSampleFiles\savestate.omr" />
     <EmbeddedResource Include="MovieParsers\OmrSampleFiles\svi.omr" />
+    <EmbeddedResource Include="MovieParsers\VbmSampleFiles\wrongheader.vbm" />
     <EmbeddedResource Include="MovieParsers\WtfSampleFiles\2frames.wtf" />
     <EmbeddedResource Include="MovieParsers\WtfSampleFiles\noframerate.wtf" />
     <EmbeddedResource Include="MovieParsers\WtfSampleFiles\wrongheader.wtf" />
