--- a/TASVideos.Test/TASVideos.Test.csproj
+++ b/TASVideos.Test/TASVideos.Test.csproj
@@ -104,6 +104,8 @@
     <EmbeddedResource Include="MovieParsers\OmrSampleFiles\savestate.omr" />
     <EmbeddedResource Include="MovieParsers\OmrSampleFiles\svi.omr" />
     <EmbeddedResource Include="MovieParsers\VbmSampleFiles\2frames.vbm" />
+    <EmbeddedResource Include="MovieParsers\VbmSampleFiles\savestate.vbm" />
+    <EmbeddedResource Include="MovieParsers\VbmSampleFiles\sram.vbm" />
     <EmbeddedResource Include="MovieParsers\VbmSampleFiles\wrongheader.vbm" />
     <EmbeddedResource Include="MovieParsers\WtfSampleFiles\2frames.wtf" />
     <EmbeddedResource Include="MovieParsers\WtfSampleFiles\noframerate.wtf" />
