--- a/TASVideos.Data/TASVideos.Data.csproj
+++ b/TASVideos.Data/TASVideos.Data.csproj
@@ -1,16 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="SampleData\SampleData.zip" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" />
-  </ItemGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
+	</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TASVideos.Common\TASVideos.Common.csproj" />
