--- a/TASVideos.Parsers/TASVideos.MovieParsers.csproj
+++ b/TASVideos.Parsers/TASVideos.MovieParsers.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-  </PropertyGroup>
-   <ItemGroup>
-     <PackageReference Include="SharpCompress" Version="0.24.0" />
-   </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="SharpCompress" Version="0.24.0" />
+	</ItemGroup>
 </Project>
