--- a/TASVideos.ForumEngineTempTest/TASVideos.ForumEngineTempTest.csproj
+++ b/TASVideos.ForumEngineTempTest/TASVideos.ForumEngineTempTest.csproj
@@ -11,6 +11,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
