--- a/TASVideos.WikiEngineTest/TASVideos.WikiEngineTest.csproj
+++ b/TASVideos.WikiEngineTest/TASVideos.WikiEngineTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <ProjectReference Include="..\TASVideos.Data\TASVideos.Data.csproj" />
@@ -15,6 +15,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
