--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -32,8 +32,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.2" />
 		<PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
 		<PackageReference Include="RoslynCodeTaskFactory" Version="2.0.7" />
-		<PackageReference Include="Sendgrid" Version="9.12.0" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc4" />
+		<PackageReference Include="Sendgrid" Version="9.12.7" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
