--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -50,9 +50,9 @@
 		<ProjectReference Include="..\TASVideos.WikiEngine\TASVideos.WikiEngine.csproj" />
 	</ItemGroup>
 
-	<!--<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
 		<Exec Command="dotnet ../GitVersion.CommandLine/GitVersion.dll /updateassemblyinfo .gitversion.cs /ensureassemblyinfo" />
-	</Target>-->
+	</Target>
 
 	<ItemGroup>
 		<Content Update="Pages\Forum\Topics\Merge.cshtml">
