Lower-casing gitversion.dll.

--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -51,7 +51,7 @@
 	</ItemGroup>
 
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-		<Exec Command="dotnet ../GitVersion.CommandLine/GitVersion.dll /updateassemblyinfo .gitversion.cs /ensureassemblyinfo" />
+		<Exec Command="dotnet ../GitVersion.CommandLine/gitversion.dll /updateassemblyinfo .gitversion.cs /ensureassemblyinfo" />
 	</Target>
 
 	<ItemGroup>
