--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ TASVideos/wwwroot/css/site.min.css
 TASVideos/CommonAssemblyInfo.cs
 TASVideos/appsettings.Demo.json
 packages-microsoft-prod.deb
+TASVideos/Properties/serviceDependencies.json
+TASVideos/Properties/serviceDependencies.local.json
