fix post distrubor urls by having the domain as an appsetting (ideally, the app would know it's url but because it's behind a proxy it doesn't, there is probably a more clever way to fix this)

--- a/TASVideos/appsettings.Development.json
+++ b/TASVideos/appsettings.Development.json
@@ -1,13 +1,14 @@
 ﻿{
+	"BaseUrl": "https://localhost:44385",
 	"ConnectionStrings": {
 		"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TASVideos;Trusted_Connection=True;MultipleActiveResultSets=true"
 	},
 	"Irc": {
-		"Server":  "irc.freenode.net",
-		"Channel":  "#tasvideosdevirc",
-		"SecureChannel":  "#tasvideosadmindevirc",
-		"Port":  "6667",
-		"Nick":  "TASVideosAgentL",
-		"Password":  "" 
-	} 
+		"Server": "irc.freenode.net",
+		"Channel": "#tasvideosdevirc",
+		"SecureChannel": "#tasvideosadmindevirc",
+		"Port": "6667",
+		"Nick": "TASVideosAgentL",
+		"Password": ""
+	}
 }
