demo settings - change startup strategy from Import to Minimal, it shouldn't matter since scripts are passing it in explicitely, but I just want to be paranoid

--- a/TASVideos/appsettings.Demo.json
+++ b/TASVideos/appsettings.Demo.json
@@ -1,6 +1,6 @@
 {
 	"BaseUrl": "https://tasvideos.mistflux.net",
-	"StartupStrategy": "Import",
+	"StartupStrategy": "Minimal",
 	"CacheSettings": {
 		"CacheType": "Memory",
 		"CacheDurationInSeconds": "7200"
