Demo logging settings - set default to Information instead of warning, explicitely add values that were implicitely inherited

--- a/TASVideos/appsettings.Demo.json
+++ b/TASVideos/appsettings.Demo.json
@@ -8,7 +8,9 @@
 	"Logging": {
 		"IncludeScopes": false,
 		"LogLevel": {
-			"Default": "Warning"
+			"Default": "Information",
+			"System": "Information",
+			"Microsoft": "Information"
 		}
 	}
 }
