--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -16,12 +16,16 @@
 	<ItemGroup>
 		<Compile Remove="wwwroot\lib\**" />
 		<Compile Remove="wwwroot\media\**" />
+    <Compile Remove="wwwroot\torrent\**" />
 		<Content Remove="wwwroot\lib\**" />
 		<Content Remove="wwwroot\media\**" />
+    <Content Remove="wwwroot\torrent\**" />
 		<EmbeddedResource Remove="wwwroot\lib\**" />
 		<EmbeddedResource Remove="wwwroot\media\**" />
+    <EmbeddedResource Remove="wwwroot\torrent\**" />
 		<None Remove="wwwroot\lib\**" />
 		<None Remove="wwwroot\media\**" />
+    <None Remove="wwwroot\torrent\**" />
 	</ItemGroup>
 
 	<ItemGroup>
