--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -66,7 +66,7 @@
 		<Content Update="Pages\Forum\Topics\_PollCreate.cshtml">
 			<Pack>$(IncludeRazorContentInPack)</Pack>
 		</Content>
-		<Content Update="Pages\Publications\EditFile.cshtml">
+		<Content Update="Pages\Publications\EditFiles.cshtml">
 			<Pack>$(IncludeRazorContentInPack)</Pack>
 		</Content>
 		<Content Update="Pages\Publications\AdditionalMovies.cshtml">
