--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -35,6 +35,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.6" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.7" />
+		<PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.3.5" />
 		<PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
 		<PackageReference Include="RoslynCodeTaskFactory" Version="2.0.7" />
 		<PackageReference Include="Sendgrid" Version="9.12.7" />
