--- a/TASVideos.WikiEngineTest/TASVideos.WikiEngineTest.csproj
+++ b/TASVideos.WikiEngineTest/TASVideos.WikiEngineTest.csproj
@@ -13,7 +13,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net5.0</TargetFramework>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 </Project>
