Updating the Git build action to install 3.1.x alongside 5.0; uncommenting the GitVersion exec, because it should work with both frameworks side by side.

--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -56,7 +56,7 @@
 	</ItemGroup>
 
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-		<!--<Exec Command="dotnet ../GitVersion.CommandLine/gitversion.dll /updateassemblyinfo .gitversion.cs /ensureassemblyinfo" />-->
+		<Exec Command="dotnet ../GitVersion.CommandLine/gitversion.dll /updateassemblyinfo .gitversion.cs /ensureassemblyinfo" />
 	</Target>
 
 	<ItemGroup>
