ignore personal dotsettings files

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ TASVideos/CommonAssemblyInfo.cs
 packages-microsoft-prod.deb
 TASVideos/Properties/serviceDependencies.json
 TASVideos/Properties/serviceDependencies.local.json
+TASVideos.sln.personal.DotSettings
