meh, ignore this file so I don't have to delete it

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ packages-microsoft-prod.deb
 TASVideos/Properties/serviceDependencies.json
 TASVideos/Properties/serviceDependencies.local.json
 TASVideos.sln.personal.DotSettings
+TASVideos.Data/SampleData/SampleData.sql
